# pyser

./: .gitignore  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  debug_deser.py  debug_inspect.py  inspect_nested.py  inspect_serialization.py  install.ps1  install.sh  pyproject.toml  run_roundtrip.py  setup.py
.github/workflows/: ci.yml  release.yml
cpp/: CMakeLists.txt  MARSHAL_PORT_PLAN.md  base64.h  debug_dummy.cpp  pyser.cpp  pyser.hpp  pyser_deserialize.cpp  pyser_json.cpp  python_binding.cpp  vcpkg.json
pyserpy/: __init__.py
rkyv.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
serpy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: _debug_func_parts.py  _debug_serialize.py  _tmp_memoryview_test.py  check_module.py  debug_closure.py  debug_run_mem.py  test_marshal_port.py  test_pyser_extra.py  test_pyser_reduce.py  test_pyser_roundtrip.py  test_smoke.py
