[build-system]
requires = ["setuptools>=61.0", "wheel", "cmake", "ninja"]
build-backend = "setuptools.build_meta"

[project]
name = "rkyv"
version = "1.0.4"
description = "A high-performance C++ serialization library with Python bindings"
readme = "README.md"
license = {text = "MIT"}
authors = [{ name = "rand0mdevel0per" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: C++",
    "Operating System :: OS Independent",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
]
requires-python = ">=3.8"
dependencies = []

[project.urls]
"Source" = "https://github.com/rand0mdevel0per/pyser"

[project.optional-dependencies]
test = ["pytest", "zstandard"]

[tool.setuptools]
packages = ["pyserpy"]

[tool.setuptools.package-data]
pyserpy = ["*.so", "*.pyd", "*.dll"]

# cibuildwheel configuration for multi-platform builds
[tool.cibuildwheel]
build = "cp38-* cp39-* cp310-* cp311-* cp312-* cp313-*"
skip = "*-musllinux_*"

[tool.cibuildwheel.linux]
before-all = "yum install -y openssl-devel libzstd-devel || apt-get update && apt-get install -y libssl-dev libzstd-dev"
environment = { VCPKG_FORCE_SYSTEM_BINARIES = "1" }

[tool.cibuildwheel.macos]
before-all = "brew install openssl zstd nlohmann-json"
environment = { OPENSSL_ROOT_DIR = "/opt/homebrew/opt/openssl@3", LDFLAGS = "-L/opt/homebrew/opt/openssl@3/lib", CPPFLAGS = "-I/opt/homebrew/opt/openssl@3/include" }

[tool.cibuildwheel.windows]
before-build = "pip install cmake ninja"

# Ruff configuration - ignore non-critical style issues
[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
# Ignore non-critical errors:
# E402 - module level import not at top of file (needed for sys.path manipulation)
# E731 - do not assign a lambda expression (useful for testing)
# E702 - multiple statements on one line (semicolon)
# E722 - bare except (legacy code)
# F401 - unused imports (can have false positives)
ignore = ["E402", "E731", "E702", "E722", "F401"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402", "E731"]
"run_*.py" = ["E702"]
